--- a/src/accountStyles.css
+++ b/src/accountStyles.css
@@ -10,12 +10,16 @@
   color: #777;
   background-color: #ffebcd;
   margin: 0;
-  padding: 10px;
+  /*padding: 10px;*/
 }
 
 .forms {
-  padding: 0;
+  padding: 80px 0;
   margin: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .account {
@@ -33,6 +37,7 @@
   float: left;
   border-style: solid;
   border-color: #905a2a;
+  padding: 20px 20px;
 }
 
 .login {
@@ -40,6 +45,7 @@
   float: right;
   border-style: solid;
   border-color: #905a2a;
+  padding: 20px 20px;
 }
 
 input,
