--- a/src/accountStyles.css
+++ b/src/accountStyles.css
@@ -1,55 +1,42 @@
-/*-------------
- Account - create and login
--------------*/
-
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
-
 * {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   color: #777;
   background-color: #ffebcd;
   margin: 0;
-  /*padding: 10px;*/
+  padding: 10px;
 }
-
 .forms {
-  padding: 80px 0;
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
 .account {
   padding-top: 100px;
   padding-bottom: 80px;
 }
-
 .account h1 {
   text-align: center;
   color: #905a2a;
 }
-
 .create {
   width: 47%;
   float: left;
   border-style: solid;
   border-color: #905a2a;
-  padding: 20px 20px;
 }
-
 .login {
   width: 47%;
   float: right;
   border-style: solid;
   border-color: #905a2a;
-  padding: 20px 20px;
 }
-
 input,
-select {
+select, button {
   width: 100%;
   padding: 10px 10px;
   margin: 5px 5px;
@@ -57,36 +44,20 @@ select {
   border: 1px solid #905a2a;
   border-radius: 4px;
 }
-
-input[type="submit"] {
+input[type="submit"], button {
   width: 50%;
   background-color: #d2b48c;
   color: white;
   float: right;
 }
-
-input[type="submit"]:hover {
+input[type="submit"]:hover, button:hover {
   background-color: #905a2a;
 }
-
-input:focus {
+input:focus, button:focus {
   outline: none;
   border-width: 3px;
 }
-
 .footer {
   bottom: 0;
   width: 100%;
-}
-
-.toolbar {
-  display: flex;
-  align-items: center;
-
-  background-color: white;
-  font-weight: 500;
-  border-bottom: 1px solid #eeeef1;
-
-  position: sticky;
-  top: 0px;
 }
