--- a/src/accountStyles.css
+++ b/src/accountStyles.css
@@ -5,7 +5,7 @@
   color: #777;
   background-color: #ffebcd;
   margin: 0;
-  padding: 10px;
+  /*padding: 10px;*/
 }
 .forms {
   padding: 0;
@@ -24,19 +24,21 @@
   color: #905a2a;
 }
 .create {
+  padding: 20px;
   width: 47%;
   float: left;
   border-style: solid;
   border-color: #905a2a;
 }
 .login {
+  padding: 20px;
   width: 47%;
   float: right;
   border-style: solid;
   border-color: #905a2a;
 }
 input,
-select, button {
+select, .account-btn {
   width: 100%;
   padding: 10px 10px;
   margin: 5px 5px;
@@ -44,16 +46,16 @@ select, button {
   border: 1px solid #905a2a;
   border-radius: 4px;
 }
-input[type="submit"], button {
+input[type="submit"], .account-btn {
   width: 50%;
   background-color: #d2b48c;
   color: white;
   float: right;
 }
-input[type="submit"]:hover, button:hover {
+input[type="submit"]:hover, .account-btn:hover {
   background-color: #905a2a;
 }
-input:focus, button:focus {
+input:focus, .account-btn:focus {
   outline: none;
   border-width: 3px;
 }
