--- a/src/css/conversationStyles.css
+++ b/src/css/conversationStyles.css
@@ -3,6 +3,7 @@
     padding-bottom: 100px;
     justify-content: center;
     align-content: center;
+    background-color: #333;
 }
 
 #join-heading {
@@ -10,6 +11,7 @@
     padding-bottom: 0;
     text-align: center;
     margin: 0;
+    color: #333333;
 }
 
 .join-container{
@@ -22,6 +24,7 @@
     overflow-x: auto;
     justify-content: center;
     align-content: center;
+
 }
 
 .topic-image{
@@ -38,6 +41,7 @@
     margin: 10px 10px;
     transition: transform 300ms ease 100ms;
     border-radius: 30px;
+    border: none;
     min-width: 300px;
     max-width: 300px;
     min-height: 300px;
@@ -53,7 +57,7 @@
     color: white;
     text-decoration: none;
     font-size: 25px;
-    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
 }
 
 /* remove the outline from button */
@@ -73,7 +77,7 @@ button:focus {
 
 .btn-join{
     text-align: center;
-    padding-top: 124px;
+    padding-top: 105px;
     padding-left: 10px;
     padding-right: 10px;
     width: 300px;
@@ -83,10 +87,9 @@ button:focus {
     color: #333;
     text-decoration: none;
     border-radius: 30px;
-    font-size: 25px;
-    color: white;
-    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    font-size: 70px;
     transition: transform 300ms ease 100ms;
+    box-shadow: 0px 12px 20px rgba(0, 0, 0, 0.2);
 }
 
 .btn-join:hover {
